--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -18,13 +18,16 @@
                 {{ item[0] }}
             </a>
         </ul>
-        <div (click)="showMobileNavBar=!showMobileNavBar" class="flex items-center lg:hidden h-8">
-            <div class="w-6 h-0.5 bg-white relative
-                    before:w-6 before:h-0.5 before:content-[''] before:absolute before:translate-y-2 before:bg-white
-                    after:w-6 after:h-0.5 after:content-[''] after:absolute after:-translate-y-2 after:bg-white transition-all duration-300 before::transition-all after:duration-300 before::transition-all
-                "
-                [ngClass]="{'after:opacity-0 after:-rotate-45 rotate-45 after:-translate-y-[0px] before:translate-y-[0px]  before:-rotate-90': showMobileNavBar === true}">
+        <div (click)="showMobileNavBar=!showMobileNavBar" class="flex lg:hidden">
+            <div class="flex items-center lg:hidden h-8">
+                <div class="w-6 h-0.5 bg-white relative
+                before:w-6 before:h-0.5 before:content-[''] before:absolute before:translate-y-2 before:bg-white
+                after:w-6 after:h-0.5 after:content-[''] after:absolute after:-translate-y-2 after:bg-white transition-all duration-300 before::transition-all after:duration-300 before::transition-all
+            "
+            [ngClass]="{'after:opacity-0 after:-rotate-45 rotate-45 after:-translate-y-[0px] before:translate-y-[0px]  before:-rotate-90': showMobileNavBar === true}">
+        </div>
             </div>
+                
             <div [ngClass]="{'translate-x-full': showMobileNavBar === true}" class="lg:hidden w-auto pr-10 font-[Akko] backdrop-blur-lg flex flex-col justify-between fixed right-full top-0 bg-black/80 min-h-screen transition-all duration-300 z-[200]">
                 <div>
                     <ul class="my-2">
