--- a/src/app/admin/admin-messages/admin-messages.component.html
+++ b/src/app/admin/admin-messages/admin-messages.component.html
@@ -1,6 +1,6 @@
 <div class="relative w-full px-6 flex flex-col  mt-14 lg:mt-0">
     <div class="grid xl:grid-cols-2 grid-cols-1 mt-4 xl:mt-0 items-center place-items-center">
-        <div class="w-full xl:mt-6 pr-2 xl:mb-6  mt-2 mb-2">
+        <div class="w-full xl:mt-6 lg:pr-2 xl:mb-6  mt-2 mb-2">
             <div class="flex items-center px-5 py-6 rounded-lg bg-black/20 border border-white/10">
                 <div class="p-3 rounded-full bg-indigo-600 bg-opacity-75">
 
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="w-full pl-2 xl:mt-6 xl:mb-6 mt-2 mb-2">
+        <div class="w-full lg:pl-2 xl:mt-6 xl:mb-6 mt-2 mb-2">
             <div class="flex items-center px-5 py-6  rounded-lg bg-black/20 border border-white/10">
                 <div class="p-3 rounded-full bg-orange-600 bg-opacity-75">
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="white"
@@ -41,6 +41,9 @@
                 <tr class="rounded-lg">
                     <th scope="col" [width]="8" align="left" class="py-3 w-2"></th>
                     <th scope="col" align="left" class="px-6 py-3">
+                        Üzenet elküldve
+                    </th>
+                    <th scope="col" align="center" class="px-6 py-3">
                         Üzenet küldő neve
                     </th>
                     <th scope="col" align="center" class="px-6 py-3">
@@ -56,13 +59,15 @@
 
             </thead>
             <tbody>
-                <tr *ngFor="let messageValue of messageList; let i = index"
+                <tr *ngFor="let messageValue of paginatedList; let i = index"
                     class="last:border-b-0 border-b bg-black/20 border-white/10 hover:bg-white/10 ">
                     <td scope="row" align="left" class="px-6 py-4">
                         <div *ngIf="messageValue['is_replied'] === false" class="flex w-2 h-2 rounded-full bg-red-500 mr-2"></div>
                     </td>
-                    
                     <td scope="row" align="left" class="px-6 py-4">                     
+                        {{ formatDate(messageValue["createdAt"]) }}
+                    </td>
+                    <td scope="row" align="center" class="px-6 py-4">                     
                         {{ messageValue["name"] }}
                     </td>
                     <td scope="row" align="center" class="px-6 py-4">
@@ -75,12 +80,52 @@
 
                     <td scope="row" align="right" class="px-6 py-4">
                         <span class="gap-2">
-                            <svg (click)="responseClick(i)" class="w-4 fill-white cursor-pointer hover:fill-[#C42329]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M205 34.8c11.5 5.1 19 16.6 19 29.2v64H336c97.2 0 176 78.8 176 176c0 113.3-81.5 163.9-100.2 174.1c-2.5 1.4-5.3 1.9-8.1 1.9c-10.9 0-19.7-8.9-19.7-19.7c0-7.5 4.3-14.4 9.8-19.5c9.4-8.8 22.2-26.4 22.2-56.7c0-53-43-96-96-96H224v64c0 12.6-7.4 24.1-19 29.2s-25 3-34.4-5.4l-160-144C3.9 225.7 0 217.1 0 208s3.9-17.7 10.6-23.8l160-144c9.4-8.5 22.9-10.6 34.4-5.4z"/></svg>
+                            <svg (click)="responseClick(messageValue['_id'])" class="w-4 fill-white cursor-pointer hover:fill-[#C42329]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M205 34.8c11.5 5.1 19 16.6 19 29.2v64H336c97.2 0 176 78.8 176 176c0 113.3-81.5 163.9-100.2 174.1c-2.5 1.4-5.3 1.9-8.1 1.9c-10.9 0-19.7-8.9-19.7-19.7c0-7.5 4.3-14.4 9.8-19.5c9.4-8.8 22.2-26.4 22.2-56.7c0-53-43-96-96-96H224v64c0 12.6-7.4 24.1-19 29.2s-25 3-34.4-5.4l-160-144C3.9 225.7 0 217.1 0 208s3.9-17.7 10.6-23.8l160-144c9.4-8.5 22.9-10.6 34.4-5.4z"/></svg>
                         </span>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <nav *ngIf="paginatedList.length > 0"  aria-label="paginate" class="mt-4 flex items-center justify-between px-2 pb-4 lg:pb-0">
+            <span class="font-[Akko] text-sm text-gray-300">
+                Jelenlegi termékek {{(currentPage * itemsPerPage) - (itemsPerPage - 1)}} - {{
+                getCurrentMaxPage(currentPage) }}
+            </span>
+            <ul class="flex items-center -space-x-px h-8 text-sm">
+                <li>
+                    <a [routerLink]="['/admin/messages']"
+                        [queryParams]="{page: getPrevPage(currentPage) }"
+                        class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-400 bg-black/20 border border-white/10 rounded-s-lg hover:bg-gray-700 hover:text-white ">
+                        <span class="sr-only">Previous</span>
+                        <svg class="w-2.5 h-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M5 1 1 5l4 4" />
+                        </svg>
+                    </a>
+                </li>
+                <li *ngFor="let pageIndex of pagesList">
+    
+                    <a [routerLink]="['/admin/messages']" [queryParams]="{page: pageIndex}"
+                        [ngClass]="{'bg-red-500 text-white hover:bg-red-600': currentPage === pageIndex, 'bg-black/20 hover:bg-gray-700': currentPage !== pageIndex}"
+                        class="flex items-center justify-center px-3 h-8 leading-tight text-gray-400  border border-white/10  hover:text-white">
+                        {{ pageIndex }}
+                    </a>
+                </li>
+                <li>
+                    <a [routerLink]="['/admin/messages']"
+                        [queryParams]="{page: getNextPage(currentPage)}"
+                        class="flex items-center justify-center px-3 h-8 leading-tight border rounded-r-lg bg-black/20 border-white/10 text-gray-400 hover:bg-gray-700 hover:text-white">
+                        <span class="sr-only">Következő</span>
+                        <svg class="w-2.5 h-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 9 4-4-4-4" />
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
 <div *ngIf="showResponseModal" class="w-full ">
@@ -89,7 +134,7 @@
         <div
             class="bg-[#1E1E1E] text-white font-[Akko] max-h-screen overflow-scroll xl:overflow-auto  rounded-lg max-w-md w-full">
             <div class="w-full h-4 flex items-center justify-between border-b border-white/10 py-6 px-6 rounded-t-lg">
-                <span class="text-lg">Válaszolás neki: <span class="text-[#C42329]">{{ messageList[currentResponseID]["name"] }}</span> </span>
+                <span class="text-lg">Válaszolás neki: <span class="text-[#C42329]">{{currentMessageSource["name"] }}</span> </span>
                 <button (click)="showResponseModal = false" type="button"
                     class="text-white/80 outline-none bg-transparent hover:bg-black/10 hover:text-white rounded-lg text-sm w-8 h-8 flex justify-center items-center">
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -102,16 +147,16 @@
 
             </div>
             <div class="m-4 p-4 w-fit max-w-[75%] bg-black/20 rounded-lg font-[Akko-light]">
-                {{ messageList[currentResponseID]["message_content"] }}
+                {{currentMessageSource["message_content"] }}
             </div>
 
             <div class="flex m-4 p-4 ml-auto font-[Akko-light] rounded-lg max-w-[75%] bg-[#C42329]/20 overflow-clip">
                 Ez egy automatikusan generált üzenet! Az átlag válaszidő 24 óra ehhez kérjük türelmedet, üzenetedet megkaptuk és hamarosan válaszolunk..
             </div>   
-            <div *ngIf="messageList[currentResponseID]['is_replied'] === true" class="flex m-4 p-4 ml-auto font-[Akko-light] rounded-lg max-w-[75%] bg-[#C42329]/20 overflow-clip">
-                {{ messageList[currentResponseID]["reply_content"]}}
+            <div *ngIf="currentMessageSource['is_replied'] === true" class="flex m-4 p-4 ml-auto font-[Akko-light] rounded-lg max-w-[75%] bg-[#C42329]/20 overflow-clip">
+                {{currentMessageSource["reply_message"]}}
             </div> 
-            <ng-container *ngIf="messageList[currentResponseID]['is_replied'] === true; else elseTemplate">
+            <ng-container *ngIf="currentMessageSource['is_replied'] === true; else elseTemplate">
                 <div class="bg-black/20 rounded-b-lg p-2 text-white/60 text-center">Erre az üzenetre már válaszoltál</div>
             </ng-container>
             <ng-template #elseTemplate>
