--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -28,8 +28,8 @@
         </aside>
     </div>
     <!-- MOBILE -->
-    <div class="relative mt-0 lg:hidden  font-[Akko] backdrop-blur-lg">
-        <nav class="w-full flex items-center justify-between fixed left-0 top-0 bg-black/60 z-[100] px-6 py-2">
+    <div class="relative w-full mt-0 lg:hidden font-[Akko]">
+        <nav class="w-full flex items-center justify-between fixed left-0 top-0 bg-black/60 z-[100] px-6 py-2  backdrop-blur-lg">
             <img class="h-12" src="/assets/images/logo.png" alt="" />
             <div (click)="showMobileNavBar=!showMobileNavBar" class="w-6 h-0.5 bg-white relative
                 before:w-6 before:h-0.5 before:content-[''] before:absolute before:translate-y-2 before:bg-white
@@ -38,7 +38,7 @@
             </div>
         </nav>
     </div>
-    <div [ngClass]="{'translate-x-full': showMobileNavBar === true}" class="lg:hidden  font-[Akko] min-w-fit flex flex-col justify-between fixed right-full top-0 bg-black/80 min-h-screen transition-all duration-300 z-[200]">
+    <div [ngClass]="{'translate-x-full': showMobileNavBar === true}" class="lg:hidden  backdrop-blur-sm font-[Akko] min-w-fit flex flex-col justify-between fixed right-full top-0 bg-black/80 min-h-screen transition-all duration-300 z-[200]">
         <div>
             <div class="py-4 border-b border-white/10 inline-flex items-center">
                 <div class=" w-16 mx-2">
