--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -13,14 +13,11 @@
 
 <div class="flex flex-col mt-8 gap-6 w-full px-6 lg:w-1/3 mx-auto">
     <div *ngFor="let newsValue of newsList" class="flex flex-col w-full bg-black/10 rounded-[20px] mx-auto font-[Akko-light] text-white border border-white/10 relative">
-        <div *ngIf="newsValue[2] === 0" class="absolute left-0 top-0 bg-black/10 backdrop-blur-sm w-full h-full rounded-[20px] flex items-center justify-center">
-            <div class="text-red-500 text-3xl font-[Akko] text-shadow">Lejárt hirdetés</div>
-        </div>
-        <img class="w-full rounded-t-[20px]" [src]="'assets/images/' + newsValue[1]" alt="" />
-        <div class="px-4 pt-4 text-3xl font-[Akko]">{{ newsValue[0] }}</div>
-        <div class="p-4" [innerHTML]="replaceNewlinesWithBreaks(newsValue[3])"></div>
+        <img class="w-full rounded-t-[20px]" [src]="newsValue['image']" alt="" />
+        <div class="px-4 pt-4 text-3xl font-[Akko]">{{ newsValue['title'] }}</div>
+        <div class="p-4" [innerHTML]="replaceNewlinesWithBreaks(newsValue['text'])"></div>
         <div class="ml-auto mr-4 mb-2 text-white/40">
-            2024. 02. 24. 0:47
+            {{ newsValue['createdAt'] }}
         </div>
     </div>
 </div>
